--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@ h3 {
 <div class="bgimg-1">
       
   <div class="caption">
-    <div class="first"><button type="button" class="scroll top-button">Scroll Down</button></div>
+    <div class="first">
+        <div style="color:rgb(255, 255, 255); background-color:#000; padding: 20px; margin: 0 auto; font: 26px 'Lato', sans-serif; width: 600px">Teacher, Designer, Developer<br />
+            Full-Stack React, Redux and Node Developer</div>
+            <br /><br />
+        <button type="button" class="scroll top-button">Scroll Down</button></div>
   </div>
 </div>
 
