Put an outline for the about me section of the site

--- a/index.html
+++ b/index.html
@@ -161,7 +161,29 @@ h3 {
 <div class="about-me"></div>
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
   <h3 style="text-align:center;">Kevin Cauto</h3>
-  <p>The man.  Started from the bottom now I'm here.</p>
+  <p>Graduated from the University of Delaware Honors Program with a double major in Mathematics Education and Foreign
+    Language and Literature
+  </p>
+  <p>Taught mathematics and computer science to high school students before realizing my calling was in private industry
+    as a web developer.
+    </p>
+    <p>Worked for Rocket Dove Marketing as a digital marketer, coding emails, updating onsite SEO, and building and maintaining WordPress sites</p>
+       
+        <p>Worked for Surgent as a front-end email developer.</p>
+
+        <p>Became the full-stack lead developer for Teacher Catapult LLC.</p>
+
+        <p>Front-End Developer for Aegis a medical magazine publishing company.</p>
+    
+  <div style="display: flex;">
+      <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+      <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+      <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+      <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+      <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+
+  </div>
+
 </div>
 
 <div class="bgimg-2" style="display: flex">
