Updated the button with a cool slow transition hover effect.

--- a/index.html
+++ b/index.html
@@ -69,21 +69,24 @@ h3 {
   color: #111;
 }
 .scroll {
-    background-color: rgb(201, 9, 9); 
+    background-color: #f44336; 
     color: white; 
-    font: 26px "Lato", sans-serif;
-    padding: 10px;
-    border: none;
+    font: 22px "Lato", sans-serif;
+    padding: 15px;
+    border: 2px #f44336 solid;
     text-transform: uppercase;
     outline: none;
-    opacity: 0.65;
+    opacity: 1;
+    border-radius: 3px;
 }
 
 .scroll:hover {
-    background-color: #f44336;
-    color: white;
-    font: 26px "Lato", sans-serif;
-    opacity: 1;
+    background: none;
+
+
+    border: 2px #f44336 solid;
+    color: #f44336;
+    transition: background-color 0.3s linear;
 }
 #header{
     position: fixed;
@@ -155,25 +158,26 @@ h3 {
         <div style="color:rgb(255, 255, 255); background-color:#000; padding: 20px; margin: 0 auto; font: 26px 'Lato', sans-serif; width: 600px">Web Developer, Designer, Teacher<br />
             Full-Stack React, Redux, and Node Engineer</div>
             <br /><br />
-        <button type="button" class="scroll top-button">Scroll Down</button></div>
+        <button type="button" class="scroll top-button">Learn More</button></div>
   </div>
 </div>
 <div class="about-me"></div>
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
   <h3 style="text-align:center;">Kevin Cauto</h3>
+
   <p>Graduated from the University of Delaware Honors Program with a double major in Mathematics Education and Foreign
-    Language and Literature
-  </p>
+    Language and Literature</p>
+
   <p>Taught mathematics and computer science to high school students before realizing my calling was in private industry
-    as a web developer.
-    </p>
+    as a web developer.</p>
+
     <p>Worked for Rocket Dove Marketing as a digital marketer, coding emails, updating onsite SEO, and building and maintaining WordPress sites</p>
        
-        <p>Worked for Surgent as a front-end email developer.</p>
+    <p>Worked for Surgent as a front-end email developer.</p>
 
-        <p>Became the full-stack lead developer for Teacher Catapult LLC.</p>
+    <p>Became the full-stack lead developer for Teacher Catapult LLC</p>
 
-        <p>Front-End Developer for Aegis a medical magazine publishing company.</p>
+    <p>Front-End Developer for Aegis a medical magazine publishing company.</p>
     
   <div style="display: flex;">
       <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
@@ -181,7 +185,6 @@ h3 {
       <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
       <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
       <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
-
   </div>
 
 </div>
