--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ h3 {
 }
 
 #navbar a:hover {
-  background-color: rgb(201, 9, 9);
+  background-color: #f44336;
   color: black;
 }
 
@@ -145,9 +145,9 @@ h3 {
 <body onscroll="myFunction()">
   <div class="top"></div>
     <div id="navbar">
-        <a class="home-nav" href="javascript:void(0)">Home</a>
+        <a class="home-nav" href="javascript:void(0)">Kevin Cauto</a>
         <a class="about-nav"href="javascript:void(0)">About Me</a>
-        <a href="javascript:void(0)">My Work</a>
+        <a class="work-nav"href="javascript:void(0)">My Work</a>
         <a href="javascript:void(0)">Contact</a>
       </div>
 <div class="bgimg-1">
@@ -163,7 +163,7 @@ h3 {
 </div>
 <div class="about-me"></div>
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-  <h3 style="text-align:center;">Kevin Cauto</h3>
+  <h3 style="text-align:center;">About Me</h3>
 
   <p>Graduated from the University of Delaware Honors Program with a double major in Mathematics Education and Foreign
     Language and Literature</p>
@@ -189,12 +189,8 @@ h3 {
 
 </div>
 
-<div class="bgimg-2" style="display: flex">
-  <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
-  <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
-  <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
-  <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
-  <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+<div class="bgimg-2">
+ 
 
   <div class="caption">
     <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
@@ -219,8 +215,36 @@ h3 {
   </div>
 </div>
 
+<div class="my-work"></div>
+<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+  <h3 style="text-align:center;">My Work</h3>
+
+  <p>Graduated from the University of Delaware Honors Program with a double major in Mathematics Education and Foreign
+    Language and Literature</p>
+
+  <p>Taught mathematics and computer science to high school students before realizing my calling was in private industry
+    as a web developer.</p>
+
+    <p>Worked for Rocket Dove Marketing as a digital marketer, coding emails, updating onsite SEO, and building and maintaining WordPress sites</p>
+       
+    <p>Worked for Surgent as a front-end email developer.</p>
+
+    <p>Became the full-stack lead developer for Teacher Catapult LLC</p>
+
+    <p>Front-End Developer for Aegis a medical magazine publishing company.</p>
+    
+  <div style="display: flex;">
+      <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+      <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+      <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+      <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+      <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+  </div>
+</div>
+
 <div class="bgimg-1">
   <div class="caption">
+        <h3>Contact me</h3>
         <button type="button" class="scroll bottom-button">Scroll Up</button>
 
   </div>
@@ -228,7 +252,7 @@ h3 {
 <script>
 $(".top-button").click(function() {
         $('html,body').animate({
-            scrollTop: $(".second").offset().top},
+            scrollTop: $(".about-me").offset().top},
             500);
     });
     $(".bottom-button").click(function() {
@@ -244,6 +268,11 @@ $(".top-button").click(function() {
     $(".home-nav").click(function() {
         $('html,body').animate({
             scrollTop: $(".top").offset().top},
+            500);
+    });
+    $(".work-nav").click(function() {
+        $('html,body').animate({
+            scrollTop: $(".my-work").offset().top},
             500);
     });
     var navbar = document.getElementById("navbar");
