My email was now added in.

--- a/index.html
+++ b/index.html
@@ -219,19 +219,9 @@ h3 {
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
   <h3 style="text-align:center;">My Work</h3>
 
-  <p>Graduated from the University of Delaware Honors Program with a double major in Mathematics Education and Foreign
-    Language and Literature</p>
+  <p>I am very active on Github, you can see what I'm currently up to <a href="https://github.com/kevincauto" target="_blank" >HERE</a>.</p>
 
-  <p>Taught mathematics and computer science to high school students before realizing my calling was in private industry
-    as a web developer.</p>
 
-    <p>Worked for Rocket Dove Marketing as a digital marketer, coding emails, updating onsite SEO, and building and maintaining WordPress sites</p>
-       
-    <p>Worked for Surgent as a front-end email developer.</p>
-
-    <p>Became the full-stack lead developer for Teacher Catapult LLC</p>
-
-    <p>Front-End Developer for Aegis a medical magazine publishing company.</p>
     
   <div style="display: flex;">
       <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
@@ -245,6 +235,7 @@ h3 {
 <div class="bgimg-1">
   <div class="caption">
         <h3>Contact me</h3>
+        <h3>KevinMCauto@gmail.com</h3>
         <button type="button" class="scroll bottom-button">Scroll Up</button>
 
   </div>
