I added a blog section to feature technical articles.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ h3 {
 
 #navbar a:hover {
   background-color: #f44336;
-  color: black;
+  color:#fff;
 }
 
 #navbar a.active {
@@ -148,6 +148,7 @@ h3 {
         <a class="home-nav" href="javascript:void(0)">Kevin Cauto</a>
         <a class="about-nav"href="javascript:void(0)">About Me</a>
         <a class="work-nav"href="javascript:void(0)">My Work</a>
+        <a class="work-nav"href="javascript:void(0)">My Blog</a>
         <a href="javascript:void(0)">Contact</a>
       </div>
 <div class="bgimg-1">
@@ -197,24 +198,12 @@ h3 {
   </div>
 </div>
 
+
 <div style="position:relative;">
   <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
     <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
   </div>
 </div>
-
-<div class="bgimg-3">
-  <div class="caption">
-    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span>
-  </div>
-</div>
-
-<div class="second" style="position:relative;">
-  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-    <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
-  </div>
-</div>
-
 <div class="my-work"></div>
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
   <h3 style="text-align:center;">My Work</h3>
@@ -231,6 +220,47 @@ h3 {
       <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
   </div>
 </div>
+
+
+<div class="bgimg-3">
+  <div class="caption">
+    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span>
+  </div>
+</div>
+
+<div class="second" style="position:relative;">
+  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+    <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+  </div>
+</div>
+
+<div class="blog"></div>
+<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+    <h3 style="text-align:center;">My Blog</h3>
+  
+    <p>Graduated from the University of Delaware Honors Program with a double major in Mathematics Education and Foreign
+      Language and Literature</p>
+  
+    <p>Taught mathematics and computer science to high school students before realizing my calling was in private industry
+      as a web developer.</p>
+  
+      <p>Worked for Rocket Dove Marketing as a digital marketer, coding emails, updating onsite SEO, and building and maintaining WordPress sites</p>
+         
+      <p>Worked for Surgent as a front-end email developer.</p>
+  
+      <p>Became the full-stack lead developer for Teacher Catapult LLC</p>
+  
+      <p>Front-End Developer for Aegis a medical magazine publishing company.</p>
+      
+    <div style="display: flex;">
+        <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+        <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+        <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+        <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+        <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
+    </div>
+  
+  </div>
 
 <div class="bgimg-1">
   <div class="caption">
