Altered the middle section between the images.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ h3 {
   <div class="caption">
     <div class="first">
 
-        <div style="color:rgb(255, 255, 255); background-color:#000; padding: 20px; margin: 0 auto; font: 26px 'Lato', sans-serif; width: 600px">Web Developer, Designer, Teacher<br />
+        <div class="tagling" style="color:rgb(255, 255, 255); background-color:#000; padding: 20px; margin: 0 auto; font: 26px 'Lato', sans-serif; width: 600px">Web Developer, Designer, Teacher<br />
             Full-Stack React, Redux, and Node Engineer</div>
             <br /><br />
         <button type="button" class="scroll top-button">Learn More</button></div>
@@ -201,7 +201,7 @@ h3 {
 
 <div style="position:relative;">
   <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-    <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+    <p>Thank you for checking my portfolio out!</p>
   </div>
 </div>
 <div class="my-work"></div>
@@ -306,6 +306,7 @@ function myFunction() {
     navbar.classList.remove("sticky");
   }
 }
+
     </script>
 </body>
 </html>
