Added a tutorial section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ h3 {
         <a class="home-nav" href="javascript:void(0)">Kevin Cauto</a>
         <a class="about-nav"href="javascript:void(0)">About Me</a>
         <a class="work-nav"href="javascript:void(0)">My Work</a>
-        <a class="work-nav"href="javascript:void(0)">My Blog</a>
+        <a class="work-nav"href="javascript:void(0)">Tutorials</a>
         <a class="contact-nav" href="javascript:void(0)">Contact</a>
       </div>
 <div class="bgimg-1">
@@ -246,21 +246,14 @@ h3 {
 
 <div class="blog"></div>
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-    <h3 style="text-align:center;">My Blog</h3>
+    <h3 style="text-align:center;">Tutorials</h3>
   
-    <p>Graduated from the University of Delaware Honors Program with a double major in Mathematics Education and Foreign
-      Language and Literature</p>
+    <p>I create tutorials as a way of demonstrating mastery and with the hope of helping others
+      learn different web development topics
+
+    </p>
   
-    <p>Taught mathematics and computer science to high school students before realizing my calling was in private industry
-      as a web developer.</p>
-  
-      <p>Worked for Rocket Dove Marketing as a digital marketer, coding emails, updating onsite SEO, and building and maintaining WordPress sites</p>
-         
-      <p>Worked for Surgent as a front-end email developer.</p>
-  
-      <p>Became the full-stack lead developer for Teacher Catapult LLC</p>
-  
-      <p>Front-End Developer for Aegis a medical magazine publishing company.</p>
+
       
     <div style="display: flex;">
         <div style="width: 100px; height: 50px; background-color:#000; margin: 10px; text-align:center; padding: 10px" >Test</div>
