--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body, html {
   
 }
 
-.bgimg-2, .bgimg-3 {
+.bgimg-1, .bgimg-2, .bgimg-3 {
   position: relative;
   background-attachment: fixed;
   background-position: center;
@@ -148,7 +148,7 @@ h3 {
         <a class="home-nav" href="javascript:void(0)">Kevin Cauto</a>
         <a class="about-nav"href="javascript:void(0)">About Me</a>
         <a class="work-nav"href="javascript:void(0)">My Work</a>
-        <a class="work-nav"href="javascript:void(0)">Tutorials</a>
+        <a class="tutorials-nav"href="javascript:void(0)">Tutorials</a>
         <a class="contact-nav" href="javascript:void(0)">Contact</a>
       </div>
 <div class="bgimg-1">
@@ -194,7 +194,7 @@ h3 {
  
 
   <div class="caption">
-    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
+    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">What a view!</span>
   </div>
 </div>
 
@@ -244,7 +244,7 @@ h3 {
   </div>
 </div>
 
-<div class="blog"></div>
+<div class="tutorials"></div>
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
     <h3 style="text-align:center;">Tutorials</h3>
   
@@ -305,6 +305,11 @@ $(".top-button").click(function() {
     $(".contact-nav").click(function() {
         $('html,body').animate({
             scrollTop: $(".contact").offset().top},
+            500);
+    });
+    $(".tutorials-nav").click(function() {
+        $('html,body').animate({
+            scrollTop: $(".tutorials").offset().top},
             500);
     });
     var navbar = document.getElementById("navbar");
