--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body, html {
 
 .caption span.border {
   background-color: #111;
-  color: #fff;
+  color: #000;
   padding: 18px;
   font-size: 25px;
   letter-spacing: 10px;
